--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,15 @@ cmake_install.cmake
 install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
+*.vcxproj
+*.vcxproj.filters
+*.cmake
+*.sln
 _deps
+
+# vscode
+.vscode
+launch.json
 
 # C
 crga
