--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,9 +26,11 @@ endif()
 # Our Project
 if (UNIX)
     set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build/DEBUG)
+    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build/LIBRARY)
 endif()
-set(SOURCES src/main.c src/crga.c src/crga.h)
-add_executable(${PROJECT_NAME} ${SOURCES})
+set(SOURCES src/crga.c src/crga.h src/crgahelper.h)
+#add_executable(${PROJECT_NAME}_main src/main.c ${SOURCES})
+add_library(${PROJECT_NAME} SHARED ${SOURCES})
 #set(raylib_VERBOSE 1)
 target_compile_features(${PROJECT_NAME} PUBLIC c_std_99)
 target_link_libraries(${PROJECT_NAME} raylib)
