--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,13 +28,14 @@ if (UNIX)
     set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build/DEBUG)
     set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build/LIBRARY)
 endif()
-set(SOURCES src/crga.c src/crga.h src/crgahelper.h)
+set(SOURCES src/crga.c src/crga.h src/crgahelper.h src/termdraw.h)
 add_executable(${PROJECT_NAME} src/main.c ${SOURCES})
 #add_library(${PROJECT_NAME} SHARED ${SOURCES})
 #set(raylib_VERBOSE 1)
 target_compile_features(${PROJECT_NAME} PUBLIC c_std_99)
 target_link_libraries(${PROJECT_NAME} raylib)
-target_link_libraries(${PROJECT_NAME} notcurses)
+target_link_libraries(${PROJECT_NAME} ncurses)
+#target_link_libraries(${PROJECT_NAME} notcurses-core)
 
 # Checks if OSX and links appropriate frameworks (Only required on MacOS)
 if (APPLE)
