--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,12 @@ add_executable(${PROJECT_NAME} src/main.c ${SOURCES})
 #set(raylib_VERBOSE 1)
 target_compile_features(${PROJECT_NAME} PUBLIC c_std_99)
 target_link_libraries(${PROJECT_NAME} raylib)
-target_link_libraries(${PROJECT_NAME} ncurses)
+if (WIN32)
+
+endif()
+if (UNIX)
+  target_link_libraries(${PROJECT_NAME} ncurses)
+endif()
 #target_link_libraries(${PROJECT_NAME} notcurses-core)
 
 # Checks if OSX and links appropriate frameworks (Only required on MacOS)
