--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ if (UNIX)
   set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build/DEBUG)
   set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build/LIBRARY)
 endif()
-set(SOURCES src/crga.c src/crga.h src/crgahelper.h src/termdraw.h)
+set(SOURCES src/crga.c src/crga.h src/crgahelper.h)
 add_executable(${PROJECT_NAME} src/main.c ${SOURCES})
 #add_library(${PROJECT_NAME} SHARED ${SOURCES})
 #set(raylib_VERBOSE 1)
